add auth (phone verify + firabase), add authViewModel,, add firebase storage (+png),, realmtime database (+ json), add fonts, start menu (add coffee)

--- a/Coffeee/Resources/Info.plist
+++ b/Coffeee/Resources/Info.plist
@@ -2,6 +2,22 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>UIAppFonts</key>
+	<array>
+		<string>URWGeometric-SemiBold.otf</string>
+		<string>URWGeometric-Regular.otf</string>
+	</array>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>app-1-659746409309-ios-f42fde7541d7708d61f6b4</string>
+			</array>
+		</dict>
+	</array>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
